--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "expo": "~41.0.1",
+    "expo-asset": "~8.3.1",
+    "expo-file-system": "~11.0.2",
     "expo-font": "~9.1.0",
+    "expo-sqlite": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "native-base": "^2.15.2",
     "react": "16.13.1",
